* Changed semantic benchmark evaluation execution to refork a test JVM if a test causes the JVM to crash